change for bitzeny

--- a/README
+++ b/README
@@ -1,62 +1,59 @@
-bitcoin-seeder
+BITZENY-SEEDER
 ==============
 
-Bitcoin-seeder is a crawler for the Bitcoin network, which exposes a list
-of reliable nodes via a built-in DNS server.
+bitzeny-seeder is a crawler for the BitZeny network, which exposes a list of reliable nodes via a built-in DNS server.
 
-Features:
-* regularly revisits known nodes to check their availability
-* bans nodes after enough failures, or bad behaviour
-* accepts nodes down to v0.3.19 to request new IP addresses from,
-  but only reports good post-v0.3.24 nodes.
-* keeps statistics over (exponential) windows of 2 hours, 8 hours,
-  1 day and 1 week, to base decisions on.
-* very low memory (a few tens of megabytes) and cpu requirements.
-* crawlers run in parallel (by default 24 threads simultaneously).
-
-REQUIREMENTS
+INSTALLATION
 ------------
 
-$ sudo apt-get install build-essential libboost-all-dev libssl-dev
+```bash
+cd && \
+sudo apt-get update && \
+sudo apt-get install -y build-essential libboost-all-dev libssl-dev && \
+git clone https://github.com/fujiwaraizuho/bitzeny-seeder.git && \
+cd bitzeny-seeder && \
+make -j$(nproc)
+```
+
+REMOVE
+------
+
+```
+sudo killall dnsseed ; \
+cd && sudo rm -f dnsseed.dat && sudo rm -f dnsseed.dump && sudo rm -f dnsstats.log && \
+cd && cd bitzeny-seeder/ && sudo rm -f dnsseed.dat && sudo rm -f dnsseed.dump && sudo rm -f dnsstats.log && \
+cd && rm -rf bitzeny-seeder/ && \
+sudo netstat -nulp | grep 53
+```
 
 USAGE
 -----
 
-Assuming you want to run a dns seed on dnsseed.example.com, you will
-need an authorative NS record in example.com's domain record, pointing
-to for example vps.example.com:
+On the system `zny.seed.fujishan.jp`, you can now run dnsseed with root privileged to use port 53 (`UDP`)
+```bash
+sudo ./dnsseed -h zny.seed.fujishan.jp -n zny.ns1.fujishan.jp -m contact@fujishan.jp
+```
 
-$ dig -t NS dnsseed.example.com
+Assuming you want to run a dns seed on `zny.seed.fujishan.jp`, you will need an authorative NS record in `fujishan.jp`'s domain record, pointing to for example `zny.seed.fujishan.jp`:
 
-;; ANSWER SECTION
-dnsseed.example.com.   86400    IN      NS     vps.example.com.
+```bash
+dig -t NS zny.seed.fujishan.jp
+```
 
-On the system vps.example.com, you can now run dnsseed:
+```
+;; ANSWER SECTION:
+zny.seed.fujishan.jp. 86400 IN	NS	zny.ns1.fujishan.jp.
+```
 
-./dnsseed -h dnsseed.example.com -n vps.example.com
-
-If you want the DNS server to report SOA records, please provide an
-e-mail address (with the @ part replaced by .) using -m.
-
-COMPILING
----------
-Compiling will require boost and ssl.  On debian systems, these are provided
-by `libboost-dev` and `libssl-dev` respectively.
-
-$ make
-
-This will produce the `dnsseed` binary.
-
+If you want the DNS server to report SOA records, please provide an e-mail address (with the `@` part replaced by `.`) using `-m`.
 
 RUNNING AS NON-ROOT
 -------------------
 
-Typically, you'll need root privileges to listen to port 53 (name service).
+Typically, you'll need root privileges to listen to port 53 (name service). One solution is using an iptables rule (Linux only) to redirect it to a non-privileged port:
 
-One solution is using an iptables rule (Linux only) to redirect it to
-a non-privileged port:
+```bash
+iptables -t nat -A PREROUTING -p udp --dport 53 -j REDIRECT --to-port 5353
+```
 
-$ iptables -t nat -A PREROUTING -p udp --dport 53 -j REDIRECT --to-port 5353
-
-If properly configured, this will allow you to run dnsseed in userspace, using
-the -p 5353 option.
+If properly configured, this will allow you to run dnsseed in userspace, using the -p 5353 option.
